asgn3/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> compilation-unit
Rule 1     compilation-unit -> class-declarations-opt
Rule 2     compilation-unit -> statement-list
Rule 3     semi-opt -> DELIM
Rule 4     semi-opt -> empty
Rule 5     class-declarations-opt -> class-declarations
Rule 6     class-declarations-opt -> empty
Rule 7     class-declarations -> class-declaration
Rule 8     class-declarations -> class-declarations class-declaration
Rule 9     class-declaration -> class-header class-body semi-opt
Rule 10    class-header -> CLASS IDENTIFIER COLON class-type
Rule 11    class-header -> CLASS IDENTIFIER
Rule 12    class-type -> IDENTIFIER
Rule 13    class-body -> BLOCK_BEGIN class-member-declarations-opt BLOCK_END
Rule 14    class-member-declarations-opt -> class-member-declarations
Rule 15    class-member-declarations-opt -> empty
Rule 16    class-member-declarations -> class-member-declaration
Rule 17    class-member-declarations -> class-member-declarations class-member-declaration
Rule 18    class-member-declaration -> constant-declaration
Rule 19    class-member-declaration -> field-declaration
Rule 20    class-member-declaration -> method-declaration
Rule 21    class-member-declaration -> constructor-declaration
Rule 22    constant-declaration -> CONST simple-type constant-declarators DELIM
Rule 23    constant-declaration -> modifier CONST simple-type constant-declarators DELIM
Rule 24    type -> simple-type
Rule 25    type -> class-type
Rule 26    type -> array-type
Rule 27    simple-type -> BOOL
Rule 28    simple-type -> INT
Rule 29    simple-type -> UINT
Rule 30    simple-type -> CHAR
Rule 31    simple-type -> DOUBLE
Rule 32    array-type -> simple-type OPEN_BRACKET ICONST CLOSE_BRACKET
Rule 33    constant-declarators -> constant-declarator
Rule 34    constant-declarators -> constant-declarators COMMA constant-declarator
Rule 35    constant-declarator -> IDENTIFIER ASSIGN expression
Rule 36    expression -> conditional-expression
Rule 37    expression -> assignment
Rule 38    conditional-expression -> conditional-or-expression
Rule 39    conditional-expression -> conditional-or-expression CONDOP expression COLON expression
Rule 40    conditional-or-expression -> conditional-and-expression
Rule 41    conditional-or-expression -> conditional-or-expression M_or LOGOR conditional-and-expression
Rule 42    M_or -> empty
Rule 43    M_and -> empty
Rule 44    conditional-and-expression -> inclusive-or-expression
Rule 45    conditional-and-expression -> conditional-and-expression M_and LOGAND inclusive-or-expression
Rule 46    inclusive-or-expression -> exclusive-or-expression
Rule 47    inclusive-or-expression -> inclusive-or-expression BITOR exclusive-or-expression
Rule 48    exclusive-or-expression -> and-expression
Rule 49    exclusive-or-expression -> exclusive-or-expression BITXOR and-expression
Rule 50    and-expression -> equality-expression
Rule 51    and-expression -> and-expression BITAND equality-expression
Rule 52    equality-expression -> relational-expression
Rule 53    equality-expression -> equality-expression EQ relational-expression
Rule 54    equality-expression -> equality-expression NE relational-expression
Rule 55    relational-expression -> shift-expression
Rule 56    relational-expression -> relational-expression LT shift-expression
Rule 57    relational-expression -> relational-expression GT shift-expression
Rule 58    relational-expression -> relational-expression LE shift-expression
Rule 59    relational-expression -> relational-expression GE shift-expression
Rule 60    shift-expression -> additive-expression
Rule 61    shift-expression -> shift-expression LSHIFT additive-expression
Rule 62    shift-expression -> shift-expression RSHIFT additive-expression
Rule 63    additive-expression -> multiplicative-expression
Rule 64    additive-expression -> additive-expression PLUS multiplicative-expression
Rule 65    additive-expression -> additive-expression MINUS multiplicative-expression
Rule 66    multiplicative-expression -> unary-expression
Rule 67    multiplicative-expression -> multiplicative-expression TIMES unary-expression
Rule 68    multiplicative-expression -> multiplicative-expression DIV unary-expression
Rule 69    multiplicative-expression -> multiplicative-expression MOD unary-expression
Rule 70    unary-expression -> primary-expression
Rule 71    unary-expression -> PLUS unary-expression
Rule 72    unary-expression -> MINUS unary-expression
Rule 73    unary-expression -> BITNOT unary-expression
Rule 74    unary-expression -> BITCOMP unary-expression
Rule 75    primary-expression -> primary-no-array-creation-expression
Rule 76    expression-list -> expression
Rule 77    expression-list -> expression-list COMMA expression
Rule 78    array-initializer -> BLOCK_BEGIN variable-initializer-list-opt BLOCK_END
Rule 79    variable-initializer-list-opt -> expression-list
Rule 80    variable-initializer-list-opt -> empty
Rule 81    variable-initializer -> expression
Rule 82    variable-initializer -> array-initializer
Rule 83    primary-no-array-creation-expression -> literal
Rule 84    primary-no-array-creation-expression -> IDENTIFIER
Rule 85    primary-no-array-creation-expression -> element-access
Rule 86    primary-no-array-creation-expression -> parenthesized-expression
Rule 87    primary-no-array-creation-expression -> member-access
Rule 88    primary-no-array-creation-expression -> invocation-expression
Rule 89    primary-no-array-creation-expression -> object-creation-expression
Rule 90    object-creation-expression -> NEW class-type OPEN_PAREN argument-list-opt CLOSE_PAREN
Rule 91    parenthesized-expression -> OPEN_PAREN expression CLOSE_PAREN
Rule 92    member-access -> IDENTIFIER DOT IDENTIFIER
Rule 93    invocation-expression -> IDENTIFIER OPEN_PAREN argument-list-opt CLOSE_PAREN
Rule 94    invocation-expression -> IDENTIFIER DOT IDENTIFIER OPEN_PAREN argument-list-opt CLOSE_PAREN
Rule 95    argument-list-opt -> expression-list
Rule 96    argument-list-opt -> empty
Rule 97    element-access -> IDENTIFIER OPEN_BRACKET expression CLOSE_BRACKET
Rule 98    element-access -> member-access OPEN_BRACKET expression CLOSE_BRACKET
Rule 99    assignment -> IDENTIFIER assignment-operator expression
Rule 100   assignment -> member-access assignment-operator expression
Rule 101   assignment -> element-access assignment-operator expression
Rule 102   assignment-operator -> ASSIGN
Rule 103   assignment-operator -> PLUSEQUAL
Rule 104   assignment-operator -> MINUSEQUAL
Rule 105   assignment-operator -> TIMESEQUAL
Rule 106   assignment-operator -> DIVEQUAL
Rule 107   assignment-operator -> MODEQUAL
Rule 108   assignment-operator -> BITANDEQUAL
Rule 109   assignment-operator -> BITOREQUAL
Rule 110   assignment-operator -> BITXOREQUAL
Rule 111   assignment-operator -> LSHIFTEQUAL
Rule 112   assignment-operator -> RSHIFTEQUAL
Rule 113   field-declaration -> modifier type variable-declarators DELIM
Rule 114   field-declaration -> type variable-declarators DELIM
Rule 115   modifier -> PUBLIC
Rule 116   modifier -> PRIVATE
Rule 117   variable-declarators -> variable-declarator
Rule 118   variable-declarators -> variable-declarators COMMA variable-declarator
Rule 119   variable-declarator -> IDENTIFIER
Rule 120   variable-declarator -> IDENTIFIER ASSIGN variable-initializer
Rule 121   method-declaration -> method-header method-body
Rule 122   method-header -> type IDENTIFIER OPEN_PAREN formal-parameter-list-opt CLOSE_PAREN
Rule 123   method-header -> VOID IDENTIFIER OPEN_PAREN formal-parameter-list-opt CLOSE_PAREN
Rule 124   formal-parameter-list-opt -> formal-parameter-list
Rule 125   formal-parameter-list-opt -> empty
Rule 126   formal-parameter-list -> fixed-parameters
Rule 127   fixed-parameters -> fixed-parameter
Rule 128   fixed-parameters -> fixed-parameters COMMA fixed-parameter
Rule 129   fixed-parameter -> type IDENTIFIER
Rule 130   method-body -> method-block
Rule 131   method-block -> BLOCK_BEGIN statement-list-opt BLOCK_END
Rule 132   block -> BLOCK_BEGIN M_bstart statement-list-opt BLOCK_END
Rule 133   M_bstart -> empty
Rule 134   statement-list-opt -> statement-list
Rule 135   statement-list-opt -> empty
Rule 136   statement-list -> statement
Rule 137   statement-list -> statement-list statement
Rule 138   statement -> labeled-statement
Rule 139   statement -> declaration-statement
Rule 140   statement -> block
Rule 141   statement -> empty-statement
Rule 142   statement -> expression-statement
Rule 143   statement -> selection-statement
Rule 144   statement -> iteration-statement
Rule 145   statement -> jump-statement
Rule 146   statement -> write-statement
Rule 147   statement -> read-statement
Rule 148   statement -> method-declaration
Rule 149   write-statement -> CONSOLE DOT WRITELINE OPEN_PAREN print-list CLOSE_PAREN DELIM
Rule 150   print-list -> expression
Rule 151   print-list -> expression COMMA print-list
Rule 152   read-statement -> CONSOLE DOT READLINE OPEN_PAREN IDENTIFIER CLOSE_PAREN DELIM
Rule 153   labeled-statement -> IDENTIFIER COLON statement
Rule 154   declaration-statement -> local-variable-declaration DELIM
Rule 155   declaration-statement -> local-constant-declaration DELIM
Rule 156   local-variable-declaration -> type variable-declarators
Rule 157   local-constant-declaration -> CONST simple-type constant-declarators
Rule 158   empty-statement -> DELIM
Rule 159   expression-statement -> statement-expression DELIM
Rule 160   statement-expression -> invocation-expression
Rule 161   statement-expression -> assignment
Rule 162   selection-statement -> if-statement
Rule 163   selection-statement -> switch-statement
Rule 164   if-statement -> IF OPEN_PAREN expression CLOSE_PAREN M_if block
Rule 165   if-statement -> IF OPEN_PAREN expression CLOSE_PAREN M_if block ELSE M_else block
Rule 166   if-statement -> IF OPEN_PAREN expression CLOSE_PAREN M_if block ELSE M_else if-statement M_quad
Rule 167   M_if -> empty
Rule 168   M_else -> empty
Rule 169   M_quad -> empty
Rule 170   switch-statement -> SWITCH OPEN_PAREN expression M_switch CLOSE_PAREN M_quad switch-block
Rule 171   M_switch -> empty
Rule 172   switch-block -> BLOCK_BEGIN M_bstart switch-sections BLOCK_END
Rule 173   switch-sections -> switch-section
Rule 174   switch-sections -> switch-sections switch-section
Rule 175   switch-section -> switch-label M_quad statement-list
Rule 176   switch-label -> CASE literal COLON
Rule 177   switch-label -> DEFAULT COLON
Rule 178   iteration-statement -> while-statement M_quad
Rule 179   iteration-statement -> for-statement M_quad
Rule 180   iteration-statement -> do-statement M_quad
Rule 181   while-statement -> WHILE M_quad OPEN_PAREN expression CLOSE_PAREN M_while block
Rule 182   M_while -> empty
Rule 183   do-statement -> DO M_quad block WHILE OPEN_PAREN M_quad expression CLOSE_PAREN DELIM
Rule 184   for-statement -> FOR OPEN_PAREN for-initializer-opt DELIM M_quad for-condition DELIM M_quad for-iterator-opt CLOSE_PAREN M_quad block
Rule 185   for-initializer-opt -> for-initializer
Rule 186   for-initializer-opt -> empty
Rule 187   for-initializer -> statement-expression-list
Rule 188   for-condition -> expression
Rule 189   for-iterator-opt -> for-iterator
Rule 190   for-iterator-opt -> empty
Rule 191   for-iterator -> statement-expression-list
Rule 192   statement-expression-list -> statement-expression
Rule 193   statement-expression-list -> statement-expression-list COMMA statement-expression
Rule 194   jump-statement -> break-statement
Rule 195   jump-statement -> continue-statement
Rule 196   jump-statement -> goto-statement
Rule 197   jump-statement -> return-statement
Rule 198   break-statement -> BREAK DELIM
Rule 199   continue-statement -> CONTINUE DELIM
Rule 200   goto-statement -> GOTO IDENTIFIER DELIM
Rule 201   return-statement -> RETURN expression-opt DELIM
Rule 202   expression-opt -> expression
Rule 203   expression-opt -> empty
Rule 204   constructor-declaration -> constructor-declarator constructor-body
Rule 205   constructor-declarator -> IDENTIFIER OPEN_PAREN formal-parameter-list-opt CLOSE_PAREN
Rule 206   constructor-body -> block
Rule 207   constructor-body -> DELIM
Rule 208   literal -> ICONST
Rule 209   literal -> DCONST
Rule 210   literal -> TRUE
Rule 211   literal -> FALSE
Rule 212   literal -> CCONST
Rule 213   empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 35 102 120
BITAND               : 51
BITANDEQUAL          : 108
BITCOMP              : 74
BITNOT               : 73
BITOR                : 47
BITOREQUAL           : 109
BITXOR               : 49
BITXOREQUAL          : 110
BLOCK_BEGIN          : 13 78 131 132 172
BLOCK_END            : 13 78 131 132 172
BOOL                 : 27
BREAK                : 198
CASE                 : 176
CCONST               : 212
CHAR                 : 30
CLASS                : 10 11
CLOSE_BRACKET        : 32 97 98
CLOSE_PAREN          : 90 91 93 94 122 123 149 152 164 165 166 170 181 183 184 205
COLON                : 10 39 153 176 177
COMMA                : 34 77 118 128 151 193
CONDOP               : 39
CONSOLE              : 149 152
CONST                : 22 23 157
CONTINUE             : 199
DCONST               : 209
DEFAULT              : 177
DELIM                : 3 22 23 113 114 149 152 154 155 158 159 183 184 184 198 199 200 201 207
DIV                  : 68
DIVEQUAL             : 106
DO                   : 183
DOT                  : 92 94 149 152
DOUBLE               : 31
ELSE                 : 165 166
EQ                   : 53
FALSE                : 211
FOR                  : 184
GE                   : 59
GOTO                 : 200
GT                   : 57
ICONST               : 32 208
IDENTIFIER           : 10 11 12 35 84 92 92 93 94 94 97 99 119 120 122 123 129 152 153 200 205
IF                   : 164 165 166
INT                  : 28
LE                   : 58
LOGAND               : 45
LOGOR                : 41
LSHIFT               : 61
LSHIFTEQUAL          : 111
LT                   : 56
MINUS                : 65 72
MINUSEQUAL           : 104
MOD                  : 69
MODEQUAL             : 107
NE                   : 54
NEW                  : 90
OPEN_BRACKET         : 32 97 98
OPEN_PAREN           : 90 91 93 94 122 123 149 152 164 165 166 170 181 183 184 205
PLUS                 : 64 71
PLUSEQUAL            : 103
PRIVATE              : 116
PUBLIC               : 115
READLINE             : 152
RETURN               : 201
RSHIFT               : 62
RSHIFTEQUAL          : 112
SWITCH               : 170
TIMES                : 67
TIMESEQUAL           : 105
TRUE                 : 210
UINT                 : 29
VOID                 : 123
WHILE                : 181 183
WRITELINE            : 149
error                : 

Nonterminals, with rules where they appear

M_and                : 45
M_bstart             : 132 172
M_else               : 165 166
M_if                 : 164 165 166
M_or                 : 41
M_quad               : 166 170 175 178 179 180 181 183 183 184 184 184
M_switch             : 170
M_while              : 181
additive-expression  : 60 61 62 64 65
and-expression       : 48 49 51
argument-list-opt    : 90 93 94
array-initializer    : 82
array-type           : 26
assignment           : 37 161
assignment-operator  : 99 100 101
block                : 140 164 165 165 166 181 183 184 206
break-statement      : 194
class-body           : 9
class-declaration    : 7 8
class-declarations   : 5 8
class-declarations-opt : 1
class-header         : 9
class-member-declaration : 16 17
class-member-declarations : 14 17
class-member-declarations-opt : 13
class-type           : 10 25 90
compilation-unit     : 0
conditional-and-expression : 40 41 45
conditional-expression : 36
conditional-or-expression : 38 39 41
constant-declaration : 18
constant-declarator  : 33 34
constant-declarators : 22 23 34 157
constructor-body     : 204
constructor-declaration : 21
constructor-declarator : 204
continue-statement   : 195
declaration-statement : 139
do-statement         : 180
element-access       : 85 101
empty                : 4 6 15 42 43 80 96 125 133 135 167 168 169 171 182 186 190 203
empty-statement      : 141
equality-expression  : 50 51 53 54
exclusive-or-expression : 46 47 49
expression           : 35 39 39 76 77 81 91 97 98 99 100 101 150 151 164 165 166 170 181 183 188 202
expression-list      : 77 79 95
expression-opt       : 201
expression-statement : 142
field-declaration    : 19
fixed-parameter      : 127 128
fixed-parameters     : 126 128
for-condition        : 184
for-initializer      : 185
for-initializer-opt  : 184
for-iterator         : 189
for-iterator-opt     : 184
for-statement        : 179
formal-parameter-list : 124
formal-parameter-list-opt : 122 123 205
goto-statement       : 196
if-statement         : 162 166
inclusive-or-expression : 44 45 47
invocation-expression : 88 160
iteration-statement  : 144
jump-statement       : 145
labeled-statement    : 138
literal              : 83 176
local-constant-declaration : 155
local-variable-declaration : 154
member-access        : 87 98 100
method-block         : 130
method-body          : 121
method-declaration   : 20 148
method-header        : 121
modifier             : 23 113
multiplicative-expression : 63 64 65 67 68 69
object-creation-expression : 89
parenthesized-expression : 86
primary-expression   : 70
primary-no-array-creation-expression : 75
print-list           : 149 151
read-statement       : 147
relational-expression : 52 53 54 56 57 58 59
return-statement     : 197
selection-statement  : 143
semi-opt             : 9
shift-expression     : 55 56 57 58 59 61 62
simple-type          : 22 23 24 32 157
statement            : 136 137 153
statement-expression : 159 192 193
statement-expression-list : 187 191 193
statement-list       : 2 134 137 175
statement-list-opt   : 131 132
switch-block         : 170
switch-label         : 175
switch-section       : 173 174
switch-sections      : 172 174
switch-statement     : 163
type                 : 113 114 122 129 156
unary-expression     : 66 67 68 69 71 72 73 74
variable-declarator  : 117 118
variable-declarators : 113 114 118 156
variable-initializer : 120
variable-initializer-list-opt : 78
while-statement      : 178
write-statement      : 146

Parsing method: LALR

state 0

    (0) S' -> . compilation-unit
    (1) compilation-unit -> . class-declarations-opt
    (2) compilation-unit -> . statement-list
    (5) class-declarations-opt -> . class-declarations
    (6) class-declarations-opt -> . empty
    (136) statement-list -> . statement
    (137) statement-list -> . statement-list statement
    (7) class-declarations -> . class-declaration
    (8) class-declarations -> . class-declarations class-declaration
    (213) empty -> .
    (138) statement -> . labeled-statement
    (139) statement -> . declaration-statement
    (140) statement -> . block
    (141) statement -> . empty-statement
    (142) statement -> . expression-statement
    (143) statement -> . selection-statement
    (144) statement -> . iteration-statement
    (145) statement -> . jump-statement
    (146) statement -> . write-statement
    (147) statement -> . read-statement
    (148) statement -> . method-declaration
    (9) class-declaration -> . class-header class-body semi-opt
    (153) labeled-statement -> . IDENTIFIER COLON statement
    (154) declaration-statement -> . local-variable-declaration DELIM
    (155) declaration-statement -> . local-constant-declaration DELIM
    (132) block -> . BLOCK_BEGIN M_bstart statement-list-opt BLOCK_END
    (158) empty-statement -> . DELIM
    (159) expression-statement -> . statement-expression DELIM
    (162) selection-statement -> . if-statement
    (163) selection-statement -> . switch-statement
    (178) iteration-statement -> . while-statement M_quad
    (179) iteration-statement -> . for-statement M_quad
    (180) iteration-statement -> . do-statement M_quad
    (194) jump-statement -> . break-statement
    (195) jump-statement -> . continue-statement
    (196) jump-statement -> . goto-statement
    (197) jump-statement -> . return-statement
    (149) write-statement -> . CONSOLE DOT WRITELINE OPEN_PAREN print-list CLOSE_PAREN DELIM
    (152) read-statement -> . CONSOLE DOT READLINE OPEN_PAREN IDENTIFIER CLOSE_PAREN DELIM
    (121) method-declaration -> . method-header method-body
    (10) class-header -> . CLASS IDENTIFIER COLON class-type
    (11) class-header -> . CLASS IDENTIFIER
    (156) local-variable-declaration -> . type variable-declarators
    (157) local-constant-declaration -> . CONST simple-type constant-declarators
    (160) statement-expression -> . invocation-expression
    (161) statement-expression -> . assignment
    (164) if-statement -> . IF OPEN_PAREN expression CLOSE_PAREN M_if block
    (165) if-statement -> . IF OPEN_PAREN expression CLOSE_PAREN M_if block ELSE M_else block
    (166) if-statement -> . IF OPEN_PAREN expression CLOSE_PAREN M_if block ELSE M_else if-statement M_quad
    (170) switch-statement -> . SWITCH OPEN_PAREN expression M_switch CLOSE_PAREN M_quad switch-block
    (181) while-statement -> . WHILE M_quad OPEN_PAREN expression CLOSE_PAREN M_while block
    (184) for-statement -> . FOR OPEN_PAREN for-initializer-opt DELIM M_quad for-condition DELIM M_quad for-iterator-opt CLOSE_PAREN M_quad block
    (183) do-statement -> . DO M_quad block WHILE OPEN_PAREN M_quad expression CLOSE_PAREN DELIM
    (198) break-statement -> . BREAK DELIM
    (199) continue-statement -> . CONTINUE DELIM
    (200) goto-statement -> . GOTO IDENTIFIER DELIM
    (201) return-statement -> . RETURN expression-opt DELIM
    (122) method-header -> . type IDENTIFIER OPEN_PAREN formal-parameter-list-opt CLOSE_PAREN
    (123) method-header -> . VOID IDENTIFIER OPEN_PAREN formal-parameter-list-opt CLOSE_PAREN
    (24) type -> . simple-type
    (25) type -> . class-type
    (26) type -> . array-type
    (93) invocation-expression -> . IDENTIFIER OPEN_PAREN argument-list-opt CLOSE_PAREN
    (94) invocation-expression -> . IDENTIFIER DOT IDENTIFIER OPEN_PAREN argument-list-opt CLOSE_PAREN
    (99) assignment -> . IDENTIFIER assignment-operator expression
    (100) assignment -> . member-access assignment-operator expression
    (101) assignment -> . element-access assignment-operator expression
    (27) simple-type -> . BOOL
    (28) simple-type -> . INT
    (29) simple-type -> . UINT
    (30) simple-type -> . CHAR
    (31) simple-type -> . DOUBLE
    (12) class-type -> . IDENTIFIER
    (32) array-type -> . simple-type OPEN_BRACKET ICONST CLOSE_BRACKET
    (92) member-access -> . IDENTIFIER DOT IDENTIFIER
    (97) element-access -> . IDENTIFIER OPEN_BRACKET expression CLOSE_BRACKET
    (98) element-access -> . member-access OPEN_BRACKET expression CLOSE_BRACKET

    $end            reduce using rule 213 (empty -> .)
    IDENTIFIER      shift and go to state 39
    BLOCK_BEGIN     shift and go to state 53
    DELIM           shift and go to state 4
    CONSOLE         shift and go to state 56
    CLASS           shift and go to state 54
    CONST           shift and go to state 52
    IF              shift and go to state 60
    SWITCH          shift and go to state 50
    WHILE           shift and go to state 34
    FOR             shift and go to state 24
    DO              shift and go to state 51
    BREAK           shift and go to state 45
    CONTINUE        shift and go to state 30
    GOTO            shift and go to state 8
    RETURN          shift and go to state 16
    VOID            shift and go to state 7
    BOOL            shift and go to state 46
    INT             shift and go to state 27
    UINT            shift and go to state 59
    CHAR            shift and go to state 33
    DOUBLE          shift and go to state 13

    return-statement               shift and go to state 19
    method-header                  shift and go to state 17
    write-statement                shift and go to state 1
    member-access                  shift and go to state 2
    selection-statement            shift and go to state 32
    simple-type                    shift and go to state 18
    compilation-unit               shift and go to state 49
    expression-statement           shift and go to state 3
    class-declarations-opt         shift and go to state 20
    break-statement                shift and go to state 36
    element-access                 shift and go to state 21
    method-declaration             shift and go to state 37
    local-constant-declaration     shift and go to state 22
    statement                      shift and go to state 38
    assignment                     shift and go to state 57
    for-statement                  shift and go to state 6
    type                           shift and go to state 40
    read-statement                 shift and go to state 55
    do-statement                   shift and go to state 23
    array-type                     shift and go to state 42
    continue-statement             shift and go to state 25
    invocation-expression          shift and go to state 14
    class-declaration              shift and go to state 58
    labeled-statement              shift and go to state 9
    declaration-statement          shift and go to state 43
    switch-statement               shift and go to state 10
    statement-expression           shift and go to state 5
    jump-statement                 shift and go to state 11
    iteration-statement            shift and go to state 44
    local-variable-declaration     shift and go to state 26
    class-declarations             shift and go to state 12
    goto-statement                 shift and go to state 28
    if-statement                   shift and go to state 29
    empty                          shift and go to state 41
    class-header                   shift and go to state 15
    statement-list                 shift and go to state 47
    class-type                     shift and go to state 61
    while-statement                shift and go to state 48
    empty-statement                shift and go to state 35
    block                          shift and go to state 31

state 1

    (146) statement -> write-statement .

    IDENTIFIER      reduce using rule 146 (statement -> write-statement .)
    BLOCK_BEGIN     reduce using rule 146 (statement -> write-statement .)
    DELIM           reduce using rule 146 (statement -> write-statement .)
    CONSOLE         reduce using rule 146 (statement -> write-statement .)
    CONST           reduce using rule 146 (statement -> write-statement .)
    IF              reduce using rule 146 (statement -> write-statement .)
    SWITCH          reduce using rule 146 (statement -> write-statement .)
    WHILE           reduce using rule 146 (statement -> write-statement .)
    FOR             reduce using rule 146 (statement -> write-statement .)
    DO              reduce using rule 146 (statement -> write-statement .)
    BREAK           reduce using rule 146 (statement -> write-statement .)
    CONTINUE        reduce using rule 146 (statement -> write-statement .)
    GOTO            reduce using rule 146 (statement -> write-statement .)
    RETURN          reduce using rule 146 (statement -> write-statement .)
    VOID            reduce using rule 146 (statement -> write-statement .)
    BOOL            reduce using rule 146 (statement -> write-statement .)
    INT             reduce using rule 146 (statement -> write-statement .)
    UINT            reduce using rule 146 (statement -> write-statement .)
    CHAR            reduce using rule 146 (statement -> write-statement .)
    DOUBLE          reduce using rule 146 (statement -> write-statement .)
    $end            reduce using rule 146 (statement -> write-statement .)
    BLOCK_END       reduce using rule 146 (statement -> write-statement .)
    CASE            reduce using rule 146 (statement -> write-statement .)
    DEFAULT         reduce using rule 146 (statement -> write-statement .)


state 2

    (100) assignment -> member-access . assignment-operator expression
    (98) element-access -> member-access . OPEN_BRACKET expression CLOSE_BRACKET
    (102) assignment-operator -> . ASSIGN
    (103) assignment-operator -> . PLUSEQUAL
    (104) assignment-operator -> . MINUSEQUAL
    (105) assignment-operator -> . TIMESEQUAL
    (106) assignment-operator -> . DIVEQUAL
    (107) assignment-operator -> . MODEQUAL
    (108) assignment-operator -> . BITANDEQUAL
    (109) assignment-operator -> . BITOREQUAL
    (110) assignment-operator -> . BITXOREQUAL
    (111) assignment-operator -> . LSHIFTEQUAL
    (112) assignment-operator -> . RSHIFTEQUAL

    OPEN_BRACKET    shift and go to state 67
    ASSIGN          shift and go to state 73
    PLUSEQUAL       shift and go to state 69
    MINUSEQUAL      shift and go to state 66
    TIMESEQUAL      shift and go to state 65
    DIVEQUAL        shift and go to state 62
    MODEQUAL        shift and go to state 74
    BITANDEQUAL     shift and go to state 71
    BITOREQUAL      shift and go to state 68
    BITXOREQUAL     shift and go to state 70
    LSHIFTEQUAL     shift and go to state 72
    RSHIFTEQUAL     shift and go to state 63

    assignment-operator            shift and go to state 64

state 3

    (142) statement -> expression-statement .

    IDENTIFIER      reduce using rule 142 (statement -> expression-statement .)
    BLOCK_BEGIN     reduce using rule 142 (statement -> expression-statement .)
    DELIM           reduce using rule 142 (statement -> expression-statement .)
    CONSOLE         reduce using rule 142 (statement -> expression-statement .)
    CONST           reduce using rule 142 (statement -> expression-statement .)
    IF              reduce using rule 142 (statement -> expression-statement .)
    SWITCH          reduce using rule 142 (statement -> expression-statement .)
    WHILE           reduce using rule 142 (statement -> expression-statement .)
    FOR             reduce using rule 142 (statement -> expression-statement .)
    DO              reduce using rule 142 (statement -> expression-statement .)
    BREAK           reduce using rule 142 (statement -> expression-statement .)
    CONTINUE        reduce using rule 142 (statement -> expression-statement .)
    GOTO            reduce using rule 142 (statement -> expression-statement .)
    RETURN          reduce using rule 142 (statement -> expression-statement .)
    VOID            reduce using rule 142 (statement -> expression-statement .)
    BOOL            reduce using rule 142 (statement -> expression-statement .)
    INT             reduce using rule 142 (statement -> expression-statement .)
    UINT            reduce using rule 142 (statement -> expression-statement .)
    CHAR            reduce using rule 142 (statement -> expression-statement .)
    DOUBLE          reduce using rule 142 (statement -> expression-statement .)
    $end            reduce using rule 142 (statement -> expression-statement .)
    BLOCK_END       reduce using rule 142 (statement -> expression-statement .)
    CASE            reduce using rule 142 (statement -> expression-statement .)
    DEFAULT         reduce using rule 142 (statement -> expression-statement .)


state 4

    (158) empty-statement -> DELIM .

    IDENTIFIER      reduce using rule 158 (empty-statement -> DELIM .)
    BLOCK_BEGIN     reduce using rule 158 (empty-statement -> DELIM .)
    DELIM           reduce using rule 158 (empty-statement -> DELIM .)
    CONSOLE         reduce using rule 158 (empty-statement -> DELIM .)
    CONST           reduce using rule 158 (empty-statement -> DELIM .)
    IF              reduce using rule 158 (empty-statement -> DELIM .)
    SWITCH          reduce using rule 158 (empty-statement -> DELIM .)
    WHILE           reduce using rule 158 (empty-statement -> DELIM .)
    FOR             reduce using rule 158 (empty-statement -> DELIM .)
    DO              reduce using rule 158 (empty-statement -> DELIM .)
    BREAK           reduce using rule 158 (empty-statement -> DELIM .)
    CONTINUE        reduce using rule 158 (empty-statement -> DELIM .)
    GOTO            reduce using rule 158 (empty-statement -> DELIM .)
    RETURN          reduce using rule 158 (empty-statement -> DELIM .)
    VOID            reduce using rule 158 (empty-statement -> DELIM .)
    BOOL            reduce using rule 158 (empty-statement -> DELIM .)
    INT             reduce using rule 158 (empty-statement -> DELIM .)
    UINT            reduce using rule 158 (empty-statement -> DELIM .)
    CHAR            reduce using rule 158 (empty-statement -> DELIM .)
    DOUBLE          reduce using rule 158 (empty-statement -> DELIM .)
    BLOCK_END       reduce using rule 158 (empty-statement -> DELIM .)
    $end            reduce using rule 158 (empty-statement -> DELIM .)
    CASE            reduce using rule 158 (empty-statement -> DELIM .)
    DEFAULT         reduce using rule 158 (empty-statement -> DELIM .)


state 5

    (159) expression-statement -> statement-expression . DELIM

    DELIM           shift and go to state 75


state 6

    (179) iteration-statement -> for-statement . M_quad
    (169) M_quad -> . empty
    (213) empty -> .

    IDENTIFIER      reduce using rule 213 (empty -> .)
    BLOCK_BEGIN     reduce using rule 213 (empty -> .)
    DELIM           reduce using rule 213 (empty -> .)
    CONSOLE         reduce using rule 213 (empty -> .)
    CONST           reduce using rule 213 (empty -> .)
    IF              reduce using rule 213 (empty -> .)
    SWITCH          reduce using rule 213 (empty -> .)
    WHILE           reduce using rule 213 (empty -> .)
    FOR             reduce using rule 213 (empty -> .)
    DO              reduce using rule 213 (empty -> .)
    BREAK           reduce using rule 213 (empty -> .)
    CONTINUE        reduce using rule 213 (empty -> .)
    GOTO            reduce using rule 213 (empty -> .)
    RETURN          reduce using rule 213 (empty -> .)
    VOID            reduce using rule 213 (empty -> .)
    BOOL            reduce using rule 213 (empty -> .)
    INT             reduce using rule 213 (empty -> .)
    UINT            reduce using rule 213 (empty -> .)
    CHAR            reduce using rule 213 (empty -> .)
    DOUBLE          reduce using rule 213 (empty -> .)
    $end            reduce using rule 213 (empty -> .)
    BLOCK_END       reduce using rule 213 (empty -> .)
    CASE            reduce using rule 213 (empty -> .)
    DEFAULT         reduce using rule 213 (empty -> .)

    M_quad                         shift and go to state 76
    empty                          shift and go to state 77

state 7

    (123) method-header -> VOID . IDENTIFIER OPEN_PAREN formal-parameter-list-opt CLOSE_PAREN

    IDENTIFIER      shift and go to state 78


state 8

    (200) goto-statement -> GOTO . IDENTIFIER DELIM

    IDENTIFIER      shift and go to state 79


state 9

    (138) statement -> labeled-statement .
